@@ -239,6 +239,9 @@ Trunk (unreleased changes)
     HDFS-1873. Federation: Add cluster management web console.
     (Tanping Wang via suresh)
 
+    HDFS 1911 HDFS tests for the newly added viewfs
+
+
   IMPROVEMENTS
 
     HDFS-1510. Added test-patch.properties required by test-patch.sh (nigel)
@@ -316,6 +319,10 @@ Trunk (unreleased changes)
 
     HDFS-1738. change hdfs jmxget to return an empty string instead of 
     null when an attribute value is not available (tanping vi boryas)
+
+    HDFS-1842. Handle editlog opcode conflict with 0.20.203 during upgrade,
+    by throwing an error to indicate the editlog needs to be empty.
+    (suresh)
 
 Release 0.22.0 - Unreleased
 
